@@ -174,6 +174,17 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.2</version>
+          <configuration>
+            <argLine>
+              <!--
+                Gson (used for JSON serialization) utilizes reflection and needs to be able to access private fields of
+                Java core classes. For that to work correctly after Java 9, we need to open up some of the core Java
+                classes to reflection.
+                @see: https://www.oracle.com/corporate/features/understanding-java-9-modules.html
+              -->
+              --add-opens=java.base/java.lang=ALL-UNNAMED
+            </argLine>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.projectlombok</groupId>
